--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Calcetto Rating App</title>
     
     <!-- CSS SEPARATO - Modifica styles.css per cambiare l'aspetto -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles_darkgaming.css">
     
     <!-- Librerie esterne -->
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
