--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcetto Rating App</title>
+    <title>Calcetto Rating App v3</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
@@ -34,6 +34,7 @@
             </div>
         </div>
     </div>
+
     <script type="text/babel">
         const { useState, useEffect, useRef } = React;
 
@@ -384,7 +385,31 @@
                         }]
                     },
                     options: {
-                        scales: { r: { beginAtZero: true, max: 10, min: 0, ticks: { stepSize: 2 } } },
+                        scales: { 
+                            r: { 
+                                beginAtZero: true, 
+                                max: 10, 
+                                min: 0, 
+                                ticks: { 
+                                    stepSize: 2,
+                                    color: 'rgba(255, 255, 255, 0.5)',
+                                    backdropColor: 'transparent'
+                                },
+                                grid: {
+                                    color: 'rgba(255, 255, 255, 0.1)',
+                                    circular: true
+                                },
+                                angleLines: {
+                                    color: 'rgba(255, 255, 255, 0.1)'
+                                },
+                                pointLabels: {
+                                    color: 'rgba(255, 255, 255, 0.8)',
+                                    font: {
+                                        size: 11
+                                    }
+                                }
+                            } 
+                        },
                         plugins: { legend: { display: false } }
                     }
                 });
@@ -865,9 +890,40 @@
                     </div>
 
                     <div className="settings-group">
-                        <h3>📊 Importa Dati</h3>
-                        <p>Importa valutazioni da file CSV</p>
-                        <button className="btn btn-primary" onClick={() => setShowImport(true)}>📂 Importa CSV</button>
+                        <h3>💾 Backup Database</h3>
+                        <p>Esporta o importa tutti i dati (utenti e voti) per fare backup o ripristinare</p>
+                        <div style={{display: 'flex', gap: '15px', marginTop: '15px'}}>
+                            <button className="btn btn-primary" onClick={() => {
+                                const data = { users, votes, timestamp: Date.now(), date: new Date().toISOString() };
+                                const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
+                                const url = URL.createObjectURL(blob);
+                                const a = document.createElement('a');
+                                a.href = url;
+                                a.download = `calcetto_backup_${new Date().toISOString().split('T')[0]}.json`;
+                                a.click();
+                                showSuccessMsg('Backup esportato!');
+                            }}>📥 Esporta Backup</button>
+                            <button className="btn btn-secondary" onClick={() => {
+                                const input = document.createElement('input');
+                                input.type = 'file';
+                                input.accept = '.json';
+                                input.onchange = async (e) => {
+                                    try {
+                                        const file = e.target.files[0];
+                                        const text = await file.text();
+                                        const data = JSON.parse(text);
+                                        if (!confirm('⚠️ ATTENZIONE: Questo sovrascriverà tutti i dati attuali. Continuare?')) return;
+                                        if (data.users) await storage.setUsers(data.users);
+                                        if (data.votes) await storage.setVotes(data.votes);
+                                        showSuccessMsg('Backup importato!');
+                                        setTimeout(() => window.location.reload(), 1000);
+                                    } catch (err) {
+                                        alert('Errore durante l\'importazione: ' + err.message);
+                                    }
+                                };
+                                input.click();
+                            }}>📤 Importa Backup</button>
+                        </div>
                     </div>
 
                     {showImport && (<CSVImportModal onClose={() => setShowImport(false)} onSuccess={() => { setShowImport(false); showSuccessMsg('Dati importati!'); setTimeout(() => window.location.reload(), 1000); }} />)}
@@ -909,12 +965,47 @@
 
         function DebugPage({ users, votes }) {
             const [selectedPlayer, setSelectedPlayer] = useState(null);
+            const [editingVote, setEditingVote] = useState(null);
+            const [editVoteValues, setEditVoteValues] = useState({});
 
             const getVoteStats = (playerId) => {
                 const playerVotes = votes.filter(v => v.playerId === playerId);
                 const seedVotes = playerVotes.filter(v => v.voterId && v.voterId.startsWith('seed'));
                 const realVotes = playerVotes.filter(v => v.voterId && !v.voterId.startsWith('seed'));
                 return { total: playerVotes.length, seed: seedVotes.length, real: realVotes.length, allVotes: playerVotes };
+            };
+
+            const handleEditVote = (vote) => {
+                setEditingVote(vote);
+                setEditVoteValues(vote.ratings);
+            };
+
+            const handleSaveEditedVote = async () => {
+                if (!editingVote.id) {
+                    alert('Impossibile modificare voti senza ID');
+                    return;
+                }
+                try {
+                    await db.collection('votes').doc(editingVote.id).update({ ratings: editVoteValues });
+                    alert('Voto aggiornato! Ricarica la pagina per vedere le modifiche.');
+                    setEditingVote(null);
+                } catch (err) {
+                    alert('Errore durante il salvataggio: ' + err.message);
+                }
+            };
+
+            const handleDeleteVote = async (voteId) => {
+                if (!voteId) {
+                    alert('Impossibile eliminare voti senza ID');
+                    return;
+                }
+                if (!confirm('Eliminare questo voto?')) return;
+                try {
+                    await db.collection('votes').doc(voteId).delete();
+                    alert('Voto eliminato! Ricarica la pagina.');
+                } catch (err) {
+                    alert('Errore durante l\'eliminazione: ' + err.message);
+                }
             };
 
             const players = users.filter(u => !u.id.startsWith('seed'));
@@ -947,6 +1038,7 @@
                                         <th>Votante</th>
                                         <th>Tipo</th>
                                         {[...SKILLS.tecniche, ...SKILLS.tattiche, ...SKILLS.fisiche].map(skill => (<th key={skill}>{skill.substring(0, 6)}</th>))}
+                                        <th>Azioni</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -958,6 +1050,10 @@
                                                 <td>{voterName}</td>
                                                 <td><span className={`vote-type ${isSeed ? 'seed' : 'real'}`}>{isSeed ? 'Seed' : 'Reale'}</span></td>
                                                 {[...SKILLS.tecniche, ...SKILLS.tattiche, ...SKILLS.fisiche].map(skill => (<td key={skill}>{vote.ratings[skill] || '-'}</td>))}
+                                                <td>
+                                                    <button onClick={() => handleEditVote(vote)} className="admin-btn" style={{marginRight: '5px'}}>✏️</button>
+                                                    <button onClick={() => handleDeleteVote(vote.id)} className="admin-btn btn-delete">🗑️</button>
+                                                </td>
                                             </tr>
                                         );
                                     })}
@@ -969,10 +1065,44 @@
                                             const avg = skillVotes.length > 0 ? skillVotes.reduce((a, b) => a + b, 0) / skillVotes.length : 0;
                                             return (<td key={skill}>{avg > 0 ? `${avg.toFixed(2)}` : '-'}</td>);
                                         })}
+                                        <td></td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
+
+                        {editingVote && (
+                            <div className="modal-overlay">
+                                <div className="modal-content modal-large">
+                                    <h2>✏️ Modifica Voto</h2>
+                                    <p>Votante: {editingVote.voterId.startsWith('seed') ? '🤖 Seed' : (users.find(u => u.id === editingVote.voterId)?.name || 'Sconosciuto')}</p>
+                                    {['tecniche', 'tattiche', 'fisiche'].map(category => (
+                                        <div key={category} className="vote-edit-category">
+                                            <h4 className={`category-${category}`}>{category}</h4>
+                                            <div className="vote-edit-grid">
+                                                {SKILLS[category].map(skill => (
+                                                    <div key={skill} className="vote-edit-item">
+                                                        <label>{skill}</label>
+                                                        <input 
+                                                            type="number" 
+                                                            min="1" 
+                                                            max="4" 
+                                                            step="0.01" 
+                                                            value={editVoteValues[skill] || ''} 
+                                                            onChange={(e) => setEditVoteValues({...editVoteValues, [skill]: parseFloat(e.target.value) || 0})} 
+                                                        />
+                                                    </div>
+                                                ))}
+                                            </div>
+                                        </div>
+                                    ))}
+                                    <div className="modal-actions">
+                                        <button className="btn btn-secondary" onClick={() => setEditingVote(null)}>Annulla</button>
+                                        <button className="btn btn-primary" onClick={handleSaveEditedVote}>Salva</button>
+                                    </div>
+                                </div>
+                            </div>
+                        )}
                     </div>
                 );
             }
