--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@ function SettingsPage({ user, onAvatarUpdate }) {
 
             <div className="settings-group">
                 <h3>Informazioni Account</h3>
-                <div style={{background: '#f7fafc', padding: '20px', borderRadius: '10px'}}>
+<div className="settings-info-box">
                     <div style={{marginBottom: '15px'}}><strong>Nome:</strong> {user.name}</div>
                     <div><strong>Email:</strong> {user.email}</div>
                 </div>
@@ -629,7 +629,7 @@ function SettingsPage({ user, onAvatarUpdate }) {
 
             <div className="settings-group">
                 <h3>Ruoli</h3>
-                <div style={{background: '#f7fafc', padding: '20px', borderRadius: '10px'}}>
+<div className="settings-info-box">
                     <div style={{marginBottom: '15px'}}>
                         <strong>Ruolo preferito:</strong> {user.preferredRole || 'Non impostato'}
                     </div>
