--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ function PlayerProfile({ player, votes, isOwnProfile }) {
                 
                 <div className="profile-header-info">
                     <h2>{player.name}</h2>
-                    <div className="votes-count">{voteCount} match data points</div>
+                    <div className="votes-count">Sulla basse di {voteCount} valutazioni ricevute</div>
                 </div>
                 
                 {(player.preferredRole || (player.otherRoles && player.otherRoles.length > 0)) && (
